# DocuFluent

./: .gitignore  LICENSE  PUBLISHING.md  README.md  README_zh.md  analyze_duplicates.py  app.py  benchmark_models.py  generate_benchmark_data.py  inspect_docx.py  pyproject.toml  reconstruct_bilingual.py  regenerate_docs.py  requirements.txt  run_test.py  simple_latency_benchmark.py  terminology.md  translate.py
.github/workflows/: ci.yml  publish.yml
src/docu_fluent/: cli.py  sdk.py  ui.py  utils.py  workflow.py
src/translation_sdk/: document.py  llm.py  main.py  report.py  ui.py  workflow.py
