[project]
name = "docu-fluent"
dynamic = ["version"]
description = "A powerful Word document translation SDK with multi-model workflow."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "CC BY-NC-SA 4.0" }
authors = [
    { name = "chenhao", email = "twch97780@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "loguru>=0.7.3",
    "openai>=2.8.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "python-docx>=1.2.0",
    "reportlab>=4.4.5",
    "tenacity>=9.1.2",
    "gradio>=4.26.0",
    "requests>=2.32.3",
    "mammoth>=1.6.0"
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/docu_fluent"]
